@@ -68,7 +68,7 @@ INCLUDES_NODEP=	-I $(OCAMLSRCDIR)/stdlib \
 
 INCLUDES=$(INCLUDES_DEP) $(INCLUDES_NODEP)
 
-COMPFLAGS=$(INCLUDES) -warn-error A
+COMPFLAGS=$(INCLUDES) -dtypes -warn-error A
 LINKFLAGS=$(INCLUDES)
 
 CMOFILES= odoc_config.cmo \
