@@ -94,6 +94,10 @@ val index_only : bool ref
 (** To colorize code in HTML generated documentation pages, not code pages. *)
 val colorize_code : bool ref
 
+(** To display functors in short form rather than with "functor ... -> ",
+   in HTML generated documentation. *)
+val html_short_functors : bool ref
+
 (** The flag which indicates if we must generate a header (for LaTeX). *)
 val with_header : bool ref
 
